--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>epsilon388</title>
   </head>
   <body>
-    <p>Hello World! This is great!</p>
+    <p>Hello World! This is amazing!</p>
   </body>
 </html>
